<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.mtn.evento.activities.LoginActivity">

    <include layout="@layout/toolbar"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_standard"
        android:src="@drawable/user"
        />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_standard"
        android:layout_below="@+id/avatar"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:background="@drawable/curved_white"
        android:layout_marginBottom="@dimen/margin_standard"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/password"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:background="@drawable/curved_white"
        android:padding="@dimen/margin_standard"
        android:hint="Password"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/loginBtn"
        />
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:text="@string/login"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:background="@drawable/yellow_btn"
        android:padding="@dimen/margin_standard"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_standard"
        android:text="@string/sign_up"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/darkBlue"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/signUpIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
        android:layout_alignTop="@+id/signUpText"
        android:layout_toRightOf="@+id/signUpText"
        android:tint="@color/darkBlue"
        />
    



</RelativeLayout>
